fixed background image on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -177,6 +177,9 @@ Hero
   display: flex;
   justify-content: center;
   align-items: center;
+
+  background: linear-gradient(rgb(44, 174, 186, 0.7), rgba(0, 0, 0, 0.7)),
+    url("./images/main.jpeg") center/cover no-repeat;
 }
 .hero-banner {
   text-align: center;
@@ -204,11 +207,7 @@ Hero
   color: var(--clr-white);
   border-color: var(--clr-white);
 }
-@media screen and (min-width: 768px) {
-  .hero {
-    background: linear-gradient(rgb(44, 174, 186, 0.7), rgba(0, 0, 0, 0.7)),
-      url("./images/main.jpeg") center/cover no-repeat;
-  }
+@media screen and (max-width: 768px) {
   .hero-banner {
     padding: 0;
   }
